--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "axios": "^0.21.1",
     "cleave.js": "^1.6.0",
     "gravatar": "^1.8.1",
+    "jquery": "^3.2.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "md5": "^2.3.0",
+    "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
